--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,6 +16,7 @@
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-stripe-checkout": "^2.6.3",
